<resources>
    <string name="app_name">Ardiane Thread</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Menu & Settings Strings -->

    <string name="options_menu">Options</string>
    <string name="contact_menu">Contacts</string>
    <string name="parameters_item">Settings</string>
    <string name="rescue_item">Rescue Mode</string>
    <string name="profile_item">My Profile</string>
    <string name="update_item">Check for updates</string>
    <string name="alarm_item">Alarm settings</string>
    <string name="login_item">Login</string>
    <string name="register_item">Register</string>
    <string name="logout_item">Logout</string>
    <string name="notif_item">Notification Settings</string>
    <string name="message_item">Messages</string>

    <!-- Friend's Strings -->
    <string name="friend_title">Friends</string>
    <string name="friend_add">Add new Friends</string>

    <!--Profile Info's Strings -->

    <string name="user_name">Name</string>
    <string name="user_firstname">Firstname</string>
    <string name="user_phone">Phone</string>
    <string name="user_bt">Blood type</string>
    <string name="user_hid">Health insurance\'s Id</string>
    <string name="save_profile">Save Changes</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Notification Switch Buttons Strings -->

    <string name="notif_message_on">Messages Notifications: ON</string>
    <string name="notif_message_off">Messages Notifications: OFF</string>
    <string name="notif_update_on">Updates Notifications: ON</string>
    <string name="notif_update_off">Updates Notifications: OFF</string>
    <string name="notif_friend_on">Friend Requests Notifications: ON</string>
    <string name="notif_friend_off">Friend Requests Notifications: OFF</string>
    <!-- Mock Strings for ToneList -->

    <string name="tone_item_1">Metallica--Through the Never</string>

    <!-- Activities Titles -->
    <string name="theseus_title">Theseus Mode</string>
    <string name="ardiane_title">Ardiane Mode</string>

    <!-- Various Dialogs Theseus -->
    <string name="ready_theseus">Ready for your journey, </string>
    <string name="set_timer_text">When are you leaving ?</string>
    <string name="set_timer_button">Set your timer</string>
    <string name="set_ardiane_text">Choose your Ardiane(s)</string>
    <string name="start_journey_button">Start Journey</string>

    <!-- Various Dialogs Ardiane -->
    <string name="home_ardiane">Please keep watching us,</string>
</resources>