<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <View
        android:layout_width="150dp"
        android:layout_height="3dp"
        android:background="#ECCC70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="728dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="703dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/profile_item"
        android:textColor="#EED082"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/top_bar"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:ems="10"
                android:fontFamily="@font/autour_one"
                android:inputType="textPersonName"
                android:text="@string/user_name"
                android:textColor="#EED082"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:ems="10"
                android:fontFamily="@font/autour_one"
                android:inputType="textPersonName"
                android:text="@string/user_firstname"
                android:textColor="#EED082"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:ems="10"
                android:fontFamily="@font/autour_one"
                android:inputType="phone"
                android:text="@string/user_phone"
                android:textColor="#EED082"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:ems="10"
                android:fontFamily="@font/autour_one"
                android:inputType="textEmailAddress"
                android:text="@string/prompt_email"
                android:textColor="#EED082"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:ems="10"
                android:fontFamily="@font/autour_one"
                android:inputType="textPersonName"
                android:text="@string/user_bt"
                android:textColor="#EED082"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:ems="10"
                android:fontFamily="@font/autour_one"
                android:inputType="textPersonName"
                android:text="@string/user_hid"
                android:textColor="#EED082"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/prompt_password" />

            <Button
                android:id="@+id/outlinedButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Outlined button"
                android:textColor="#EED082"
                app:strokeColor="#EED082" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>